# Plasma6-Dynamic-Island

./: CMakeLists.txt  ClockLayer.qml  ControlCenterLayer.qml  ExpandedPlayerLayer.qml  HyprlandData.qml  README.md  SwipeDatePreviewLayer.qml  SysBackend.cpp  SysBackend.h  UserConfig.qml  WorkspaceLayer.qml  WorkspaceOverviewLayer.qml  main.cpp  shell.qml
plasma/: PlasmaBackend.cpp  PlasmaBackend.h  WindowManager.cpp  WindowManager.h
qml/: main.qml
